# apertium-eng-hin

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-en-hi.en-hi .dix  apertium-en-hi.en-hi.dix  apertium-en-hi.en-hi.t1x  apertium-en-hi.en-hi.t2x  apertium-en-hi.en-hi.t3x  apertium-en-hi.en.dix  apertium-en-hi.en.metadix  apertium-en-hi.hi-en.dix  apertium-en-hi.hi-en.t1x  apertium-en-hi.hi-en.t2x  apertium-en-hi.hi-en.t3x  apertium-en-hi.hi.dix  apertium-eng-hin.eng-hin.dix  apertium-eng-hin.eng.dix  apertium-eng-hin.hin-eng.lrx  apertium-eng-hin.hin-eng.rlx  apertium-eng-hin.hin-eng.t1x  apertium-eng-hin.hin.dix  configure.ac  modes.xml  pending-tests.sh
dev/: Unconverted.txt  apertium-en-hi.hi(converted-to-unicode).dix  inconsistency.sh
dev/conversion/: adj.chopped.dix
dev/testvoc/: inconsistency.sh  testvoc-summary.hin-eng.txt
test/: eng-hin-contrastive_grammar-chunker-expected.txt  eng-hin-contrastive_grammar-generator-expected.txt  eng-hin-contrastive_grammar-generator-gold.txt  eng-hin-contrastive_grammar-input.txt  eng-hin-contrastive_grammar-interchunk-expected.txt  eng-hin-contrastive_grammar-morph-expected.txt  eng-hin-contrastive_grammar-postchunk-expected.txt  eng-hin-contrastive_grammar-tagger-expected.txt  hin-eng-contrastive_grammar-biltrans-expected.txt  hin-eng-contrastive_grammar-chunker-expected.txt  hin-eng-contrastive_grammar-disam-expected.txt  hin-eng-contrastive_grammar-generator-expected.txt  hin-eng-contrastive_grammar-input.txt  hin-eng-contrastive_grammar-lex-expected.txt  hin-eng-contrastive_grammar-morph-expected.txt  hin-eng-contrastive_grammar-postchunk-expected.txt  hin-eng-contrastive_grammar-postgen-gold.txt  hin-eng-contrastive_grammar-tagger-expected.txt  hin-eng-pending-biltrans-expected.txt  hin-eng-pending-disam-expected.txt  hin-eng-pending-input.txt  hin-eng-pending-interchunk-expected.txt  hin-eng-pending-interchunk2-expected.txt  hin-eng-pending-lex-expected.txt  hin-eng-pending-morph-expected.txt  hin-eng-pending-postchunk-expected.txt  hin-eng-pending-postgen-expected.txt  hin-eng-pending-postgen-gold.txt  hin-eng-pending-tagger-expected.txt  tests.json
texts/: article2.txt  blog2.eng.txt  forbes.eng.txt  gravity3.eng.txt  pizza.analysis.txt  pizza1.eng.txt  pizza1.hin.txt
